--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div> -->
   <div class="intro-info">
     <p>
-        I’m a computer Science enthusiast who creates softwares/applications for real life problems.<br><br>
-        Currently working in Source Control Management(SCM) Team , VMware as R&D Intern.<br><br>
-        Final year Computer Science and Engineering Student from <br> Shri Ramdeobaba College of Engineering and Management , Nagpur<br><br>
+        I am a nerd and likes Python and Git.<br><br>
+        Currently working in Source Control Management(SCM) Team , VMware as Member of Technical Staff.<br><br>
+        Computer Science and Engineering Alumni from <br> Shri Ramdeobaba College of Engineering and Management , Nagpur<br><br>
         Like to Contribute in Open Source.
         <br><br><br><br>
         <a href="static/resume.pdf"><h3>__get_resume__</h3></a>
